# ST2334-Helper

./: .gitignore  LICENSE  example.py  functions.py  main.py  readme.md  setup.cfg  template.py  test.py
guide/: example.py  functions.md  template.py
src/ST2334_Helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/st2334_helper/: confidence_intervals.py  functions.py  general.py  hypotheses_tests.py
