[metadata]
name = ST2334_Helper
version = 0.1.8
author = Prittam Ravi & Kevin Chang Jon Kit
author_email = kevinchangjk@gmail.com
description = A tool for NUS module ST2334
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python3, statistics
license_file = LICENSE
url = https://github.com/prit3010/st2334_helper
project_urls =
  Bug Tracker = https://github.com/prit3010/st2334_helper/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires = scipy


[options.packages.find]
where = src
include = st2334_helper*
exclude =
  test/*
  guide/*
