[metadata]
name = ST2334 Helper
version = 0.0.1
author = Prittam Ravi & Kevin Chang Jon Kit
author_email = kevinchangjk@gmail.com
description = A computational tool for NUS module ST2334
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python3, statistics
license_file = LICENSE
url = https://github.com/prit3010/ST2334-Helper
project_urls =
  Bug Tracker = https://github.com/prit3010/ST2334-Helper/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.9
install_requires =
  scipy>=1.8.0

[options.packages.find]
where = src
include = st2334_helper*
exclude =
  test/*
  guide/*
